--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -179,11 +179,9 @@
         <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Form Style.css" />
         <ul>
             <li>
-                <input type="text" name="field1" class="field-style field-split align-left" placeholder="First Name" />
+                <input type="text" name="field1" class="field-style field-split align-left" placeholder="Name" />
             </li>
-            <li>
-                <input type="email" name="field2" class="field-style field-split align-left" placeholder="Last Name" />
-            </li>
+
             <li>
                 <input type="text" name="field3" class="field-style field-full align-left" placeholder="Email Address" />
 
