--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -173,6 +173,7 @@
                         <p class="card-text"><a href="~/Calendar/Calendar">Events</a></p>
                         <p class="card-text"><a href="~/Donate/Donate">Donate</a></p>
                         <p class="card-text"><a href="~/ContactUs/ContactUs">Contact Us</a></p>
+                        <p class="card-text"><a href="~/LandingPage/LandingPage">Admin</a></p>
                     </div>
                 </div>
             </div>
