--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -57,7 +57,18 @@
             <img src="~/Pictures/TwitterJustBird.png" width="35" height="25" onclick="window.open('https://twitter.com/soslouisville?lang=en')" style="cursor:pointer;padding-left:4px" /><img />
             <img src="~/Pictures/FacebookWhite.png" width="30" height="28" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer; padding-left:4px" /><img />
             <img src="~/Pictures/igWhiteUse.png" width="32" height="33" onclick="window.open('https://www.facebook.com/SurgeryonSundayLouisville/')" style="cursor:pointer;padding-left:4px;padding-bottom:1px" /><img />
-            <div id="google_translate_element"></div>
+            <div id="google_translate_element">
+
+                <style>
+                    .goog-logo-link {
+                        display: none !important;
+                    }
+
+                    .goog-te-gadget {
+                       color:#b71c1c !important
+                    }
+                </style>
+            </div>
         </div>
     </nav>
     <style>
