--- a/WebApplication3/Views/Home/About.cshtml
+++ b/WebApplication3/Views/Home/About.cshtml
@@ -87,7 +87,7 @@
 
 
         <br />
-        <div class="row"id="target" style="display:flex; justify-content:center; margin:0">
+        <div class="row" id="target" style="display:flex; justify-content:center; margin:0">
             <div class="column">
                 <div>
                     <h3 class="pulsate"><link class="pulsate" rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Pulsing effect.css" /> <img src="~/Pictures/CollageUse.png" height="400" width="450" /></h3>
@@ -119,8 +119,21 @@
 
 
         <span style="color:red; font-size:32px;text-shadow: 1px 1px black;">Surgery On Sunday – Louisville, Inc.</span><span style="font-size:20px"> provides outpatient surgical and endoscopic procedures to patients who are within 250% of the current federal poverty line, have medical need, are symptomatic and/or in a high risk healthcare category (such as family history), and are uninsured or underinsured.  Our licensed physicians, medical and non-clinical support staff,  and healthcare partners provide all services on a volunteer basis.</span>  <span style="color:red; font-size:25px;text-shadow: 1px 1px black;"><b> Our patients never see a bill.</b></span> <span style="font-size:20px">We are a non-profit organization based in Louisville, KY. Our program was founded in 2013 by a group of passionate medical professionals and members of the Louisville community.</span>
-        <br /><br /> <br /><div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
+
+
     </p>
+    <div id="mc_embed_signup">
+        <form action="https://cis420.us12.list-manage.com/subscribe/post?u=3cd7af7fa033822a1a6c4b936&amp;id=83d4c70f65" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+                <label for="mce-EMAIL" style="display: flex; justify-content: center;text-shadow: 1px 2px black; color:crimson;font-size:40px;font-weight:400"><b>Subscribe to our mailing list</b></label>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3cd7af7fa033822a1a6c4b936_83d4c70f65" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            </div>
+        </form>
+    </div>
+    <br /><br /> <br /><div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
     <h1 style="text-shadow: 1px 2px black;color:crimson;font-size:40px;font-weight:400"><b>We Care Since 2005</b></h1>
 
     <div class="wrapper">
@@ -148,9 +161,10 @@
             <p class="count-text ">Hours Served</p>
         </div>
     </div><br /><br />
-    
+
     <br /><div style="height:1px; background-color:Crimson; padding-left:5vw; padding-right:5vw "></div><br />
-    
+
+    <br /><br />
     <h1 style="display: flex; justify-content: center;text-shadow: 1px 2px black; color:crimson;font-size:40px;font-weight:400">
         <b>Check us out on Social Media!</b>
 
@@ -170,28 +184,21 @@
             <script src="https://instawidget.net/js/instawidget.js?u=2dc24f4b963a2bf72116aee89765d4754c7eef9171071acd2fce0c0b9f0701fa&width=300px"></script>
         </div>
     </div>
-    <br /><br /> <div style="height:1px; background-color:Crimson; padding-left:1vw; padding-right:1vw;"></div><br />
-    <div style="display: flex; justify-content: center;text-shadow: 1px 2px black;color:crimson;font-size:40px;font-weight:400">
-        <b> Subscribe to our quarterly mailing list:</b><br />
-    </div>
+    <!-- Begin MailChimp Signup Form -->
+    <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+        #mc_embed_signup {
+            background: #fff;
+            clear: left;
+            font: 14px Helvetica,Arial,sans-serif;
+            width: 100%;
+        }
+        /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+        We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
 
-    <form class="form-style-9" style="width:700px">
-        <link rel="stylesheet" type="text/css" href="~/Custom_CSS_Styles/Form Style.css" />
-        <ul>
-            <li>
-                <input type="text" name="field1" class="field-style field-split align-left" placeholder="Name" />
-            </li>
 
-            <li>
-                <input type="text" name="field3" class="field-style field-full align-left" placeholder="Email Address" />
-
-            </li>
-            <li>
-                <input type="submit" value="Subscribe" class="align-left" />
-                <img src="~/Pictures/SosLouTranspar.png" class="align-none" height="250" width="650" />
-            </li>
-        </ul>
-    </form>
+    <!--End mc_embed_signup-->
 
 
 
@@ -306,7 +313,8 @@
                 }
             });
         });</script>
-    <script>window.smoothScroll = function (target) {
+    <script>
+        window.smoothScroll = function (target) {
             var scrollContainer = target;
             do { //find scroll container
                 scrollContainer = scrollContainer.parentNode;
