--- a/WebApplication3/Views/LandingPage/LandingPage.cshtml
+++ b/WebApplication3/Views/LandingPage/LandingPage.cshtml
@@ -12,5 +12,6 @@
     <a href="https://calendar.google.com/calendar/embed?src=4bdbs6f9hfmqdp76bifg5rtm7o%40group.calendar.google.com&ctz=America%2FNew_York" style="font-size:30px;color:crimson">View Calendar</a><br /><br />
     <a href="mailto:example@SOS.com" style="font-size:30px;color:crimson">Refer a Patient (Please Review needed info PDF)</a><br /><br />
     <a href="~/Tables/Tables"style="font-size:30px;color:crimson">View Database</a><br /><br />
+    <a href="https://mailchimp.com/" style="font-size:30px;color:crimson">Send Newsletter</a>
 
 </p>
